--- a/login/css/login.css
+++ b/login/css/login.css
@@ -2,7 +2,8 @@ body {
     margin: 0;
     padding: 0;
     background-color: #17a2b8;
-    height: 100vh;
+    height: 90vh;
+    width: 1150px;
   }
   #login .container #login-row #login-column #login-box {
     max-width: 600px;
