--- a/home/css/header.css
+++ b/home/css/header.css
@@ -2,7 +2,7 @@ body{
 	padding: 0;
 	margin: 0;
 	background-color: #777;
-	background-image: url('http://i.huffpost.com/gen/1756953/images/o-CHEFS-LIFE-facebook.jpg');
+	background-image: url('../../asset/home.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -19,7 +19,8 @@ header{
 	width: 100%;
 	position: relative;
 	background-color: white;
-	box-shadow: 0px 2px 5px rgba(0,0,0,.4);
+	opacity: 0.8;
+
 }
 .timlogo{
 	width: 200px;
