--- a/login/css/password.css
+++ b/login/css/password.css
@@ -2,22 +2,14 @@
 
 .pass_show .ptxt { 
 
-position: absolute; 
-
-top: 50%; 
-
-right: 10px; 
-
-z-index: 1; 
-
-color: #f36c01; 
-
-margin-top: -10px; 
-
-cursor: pointer; 
-
-transition: .3s ease all; 
-
+    position: absolute; 
+    top: 50%; 
+    right: 10px; 
+    z-index: 1; 
+    color: #17a2b8; 
+    cursor: pointer;
+    margin-top: 5px;
+    transition: .3s ease all; 
 } 
 
 .pass_show .ptxt:hover{color: #333333;} 
